Simple login form in Angular2

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
+@import '../node_modules/@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: Century;
+  -webkit-font-smoothing: antialiased;
+  background-image: url("assets/bg.jpg");
+
+}
