--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,22 @@
-
-
-
 <div class="app-content">
+  <a href="https://github.com/selem1/loginFormAngular2" target="blank">
+    <img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png">
+  </a>
   <div class="group">
-    <div class="corner-ribbon top-right sticky blue">© Salem</div>
 
-    <form role="form" (submit)="login()">
-      <br>
-      <md-input type="text" required [(ngModel)]="user.username" id="username"
-                name="username" >
+    <form role="form" (submit)="login()"><br>
+      <md-input-container>
+        <input mdInput type="text" required [(ngModel)]="user.username" id="username" name="username" >
         <md-placeholder>
           <i class="material-icons app-input-icon">face</i>Username
         </md-placeholder>
-      </md-input><br><br>
-      <md-input type="password" required [(ngModel)]="user.password" id="password"
-      name="password" >
+      </md-input-container><br><br>
+      <md-input-container>
+        <input mdInput type="password" required [(ngModel)]="user.password" id="password" name="password" >
         <md-placeholder >
           <i class="material-icons app-input-icon">lock_open</i>Password
         </md-placeholder>
-      </md-input><br><br>
+      </md-input-container><br><br>
       <button md-raised-button color="warn" type="submit" name="action">LOGIN</button><br><br>
       <span id="err"><small>{{errorMsg}}</small></span>
       <md-slide-toggle color="primary"><small>Remember me!</small></md-slide-toggle>
