--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,9 +6,9 @@
 }
 
 form {
-  width: 1200px;
-  height: 600px;
- // margin: auto;
+  width: auto;
+  height: auto;
+  margin: auto;
   /*padding: 3em 2em 2em 2em;*/
   background: #fafafa;
   border: 1px solid #ebebeb;
